# eudyptula

./: Makefile  Makefile.am  Makefile.in  README  README.md  TODO  config.h  config.status  configure  configure.ac  go  test  test.cpp
src/: Audio.cc  Audio.h  Control.h  KeyboardListener.h  Main.cc  Main.h  MainWidget.cc  MainWidget.h  MyKeyMap.h  Node.h  Osc.h  RecordBuffer.h  Reverb.h  TickController.h  TickListener.h
stk/: config.status
stk/include/: ADSR.h  Blit.h  BlitSaw.h  BlitSquare.h  Envelope.h  Generator.h  Granulate.h  Modulate.h  Noise.h  SineWave.h  SingWave.h  Stk.h
stk/projects/demo/: demo
stk/projects/effects/: effects
stk/projects/examples/: audioprobe  bethree  controlbee  crtsine  duplex  foursine  grains  inetIn  inetOut  midiprobe  play  playsmf  record  rtsine  rtsine.cpp  sine  sineosc  threebees
stk/projects/ragamatic/: ragamat
stk/src/: ADSR.cpp  Blit.cpp  BlitSaw.cpp  BlitSquare.cpp  Envelope.cpp  Granulate.cpp  Modulate.cpp  Noise.cpp  SineWave.cpp  SingWave.cpp  Stk.cpp
